--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         <div class="intezmenyvalaszto">
             <div class="egyes">
                 <span class="info">
-                    Ha érdeklődik Alapítványunk tevékenységei iránt, <br>
+                    Ha érdeklődik Alapítványunk intézményei iránt, <br>
                      mozgassa az egeret a választott intézmény fölé majd kattintson. 
                 </span>
                 <p class="pp">Szociális intézmény <br><br>
@@ -173,25 +173,40 @@
         </div>
     </div>
 </article>
-
+<article><p id="instrukcio">Vagy válasszon tevékenységeink közül:</p>
 <div class="tevekeny">
       
     <div class="tev1">
             <table>
                 <tr>
-                    <th colspan="3" ><img id="nagysvg"  class="szoci" src="./media/icons/szoc.szolg.svg" alt=""><p> Szocális alapszolgáltatások</p></th>
+                    <th colspan="3" ><img id="nagysvg"  class="szoci" src="./media/icons/szoc.szolg.svg" alt=""></th>
                 </tr>
                 <tr>
-                    <td><img class="szoci" src="./media/icons/nappaliintezmenyek.svg" alt=""> <p>Nappali intézményeink</p></td>
-                    <td><img class="szoci" src="./media/icons/tam.szolg.svg" alt=""><p> Támogató szolgálat</p></td>
-                    <td><img  class="szoci" src="./media/icons/heart.svg" alt=""><p> Fejlesztő fogalalkozások</p></td>
+                    <th colspan="3" ><p> Szocális alapszolgáltatások</p></th>
                 </tr>
                 <tr>
-                    <th colspan="3"><img id="nagysvg" class="suli" src="./media/icons/alt.isk.svg" alt=""><p>Általános Iskola</p></th>
+                    <td><img class="szoci" src="./media/icons/nappaliintezmenyek.svg" alt=""></td>
+                    <td><img class="szoci" src="./media/icons/tam.szolg.svg" alt=""></td>
+                    <td><img  class="szoci" src="./media/icons/heart.svg" alt=""></td>
                 </tr>
                 <tr>
-                    <td colspan="2"><img class="suli" src="./media/icons/terapiak.svg" alt=""> <p>Terápiák</p></td>
-                    <td><img class="suli" src="./media/icons/korcsoportok.svg" alt=""><p> Csoportjaink</p></td>
+                    <td><p>Nappali intézményeink</p></td>
+                    <td><p>Támogató szolgálat</p></td>
+                    <td><p>Fejlesztő fogalalkozások</p></td>
+                </tr>
+                <tr>
+                    <th colspan="3"><img id="nagysvg" class="suli" src="./media/icons/alt.isk.svg" alt=""></th>
+                </tr>
+                <tr>
+                    <th colspan="3"><p>Általános Iskola</p></th>
+                </tr>
+                <tr>
+                    <td><img class="suli" src="./media/icons/terapiak.svg" alt=""></td>
+                    <td><img class="suli" src="./media/icons/korcsoportok.svg" alt=""></td>
+                </tr>
+                <tr>
+                    <td><p>Terápiák</p></td>
+                    <td><p>Néphagyomány őrzés</p></td>
                 </tr>
             </table>
         </div>
@@ -199,24 +214,40 @@
         <div class="tev2">
                 <table>
                     <tr>
-                        <th><img id="nagysvg" class="erz" src="./media/icons/erzekenyites.svg" alt=""><p> Érzékenyítés</p></th>
+                        <th colspan="3"><img id="nagysvg" class="erz" src="./media/icons/erzekenyites.svg" alt=""></th>
                     </tr>
                     <tr>
-                        <td><img class="erz" src="./media/icons/felnoteknek.svg" alt=""><p>Felnőtekknek</p></td>
-                        <td><img class="erz" src="./media/icons/iskolasoknak.svg" alt=""> <p>Iskolásoknak</p></td>
-                        <td><img class="erz" src="./media/icons/elokonytar.svg" alt=""><p>Élő könyvtár</p></td>
+                        <th colspan="3"><p> Érzékenyítés</p></th>
                     </tr>
                     <tr>
-                        <th><img class="akkr" id="nagysvg" src="./media/icons/akkreditalt fog.svg" alt=""><p>Akkreditált foglalkozások</p></th>
-                </tr><tr>    
-                        <td><img class="akkr" src="./media/icons/iskolasoknak.svg" alt=""> <p>Akkreditált1</p></td>
-                        <td><img class="akkr" src="./media/icons/elokonytar.svg" alt=""><p>Akkreditált2</p></td>
+                        <td><img class="erz" src="./media/icons/felnoteknek.svg" alt=""></td>
+                        <td><img class="erz" src="./media/icons/iskolasoknak.svg" alt=""></td>
+                        <td><img class="erz" src="./media/icons/elokonytar.svg" alt=""></td>
+                    </tr>
+                    <tr>
+                        <td><p>Felnőtekknek</p></td>
+                        <td><p>Iskolásoknak</p></td>
+                        <td><p>Élő könyvtár</p></td>
+                    </tr>
+                    <tr>
+                        <th colspan="3" ><img class="akkr" id="nagysvg" src="./media/icons/akkreditalt fog.svg" alt=""></th>
+                    </tr>
+                    <tr>
+                        <th colspan="3" ><p>Akkreditált foglalkozások</p></th>
+                    </tr>
+                    <tr>    
+                        <td><img class="akkr" src="./media/icons/iskolasoknak.svg" alt=""></td>
+                        <td><img class="akkr" src="./media/icons/elokonytar.svg" alt=""></td>
+                    </tr>
+                    <tr>    
+                        <td><p>Akkreditált1</p></td>
+                        <td><p>Akkreditált2</p></td>
                     </tr>
                 </table>
         </div>        
 
     </div>
-
+</article>
     <div class="cimke2" >
        Nyerjen betekintést mindennapjainkba!
     </div>
