--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
             <p>Általános Iskola</p>
         </div>
              <div class="kisikon" id="isk2">
-                <img src="./media/icons/phone-call.svg" alt="">
+                <img src="./media/icons/nephagyomany.svg" alt="">
                 <img src="./media/icons/terapiak.svg" alt="">
                 <img src="./media/icons/edit.svg" alt="">
                 <p>Néphagyomány örzés</p>
@@ -295,13 +295,6 @@
             <br>Adószámunk:<br>19031628-1-02 <br><br>
             Bankszámlaszámunk: <br>Takarékbank Zrt. 71800264-16026209</span>
             <br><br>
-<!--  -->
-
-    </div>
-    <div class="kozossegi" >
-
-
-    </div>
 
     <footer>
         <a class="adat" href="">Adatvédelem és adatkezelés</a>
