--- a/index.html
+++ b/index.html
@@ -87,16 +87,14 @@
         </div>
     </div>
     </nav>
-    
-    
-      <article>
+    <article>
         <div id="kotelezo_fent"> 
         <button onclick="myFunctionII()" >X</button>
         <img id="kotelezo_fentimg"  src="./media/fenti.png" alt="">
     </div>
 
         <span class="info_mob0">
-            Ha érdeklődik Alapítványunk intézményei iránt, <br>
+            Ha érdeklődik Alapítványunk intézményei<br> iránt,
              koppintson a logora. 
         </span>
         <div class="info_mob">
