--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     </nav>
     <article>
         <div id="kotelezo_fent"> 
-        <button onclick="myFunctionII()" >X</button>
+        <button onclick="kikapcs()" >X</button>
         <img id="kotelezo_fentimg"  src="./media/fenti.png" alt="">
     </div>
 
@@ -300,7 +300,7 @@
             <br><br>
 
         </div>
-            <div id="kotelezo_lent"> <button onclick="myFunction()" >X</button>
+            <div id="kotelezo_lent"> <button onclick="kikapcs()" >X</button>
             <img id="kotelezo_lentimg"  src="./media/lenti.png" id="kotelezo2" alt="">
         </div>
 
