--- a/index.html
+++ b/index.html
@@ -86,12 +86,16 @@
             </ul>
         </div>
     </div>
-    </nav>
-    <article>
-        <div id="kotelezo_fent"> 
+    <div id="kotelezo_fent"> 
         <button onclick="kikapcs()" >X</button>
         <img id="kotelezo_fentimg"  src="./media/fenti.png" alt="">
     </div>
+    </nav>
+    <article>
+    <!-- <div id="kotelezo_fent"> 
+        <button onclick="kikapcs()" >X</button>
+        <img id="kotelezo_fentimg"  src="./media/fenti.png" alt="">
+    </div> -->
 
         <span class="info_mob0">
             Ha érdeklődik Alapítványunk intézményei<br> iránt,
