--- a/index.html
+++ b/index.html
@@ -315,8 +315,8 @@
                 <h3>Kerek <span>a világ</span></h3>
                 <p class="footer-links">
                     <a href="#" class="link-1">Főoldal</a>
-                    <a href="#">Intézményválasztó</a>
-                    <a href="#">Tevékenység választó</a>
+                    <a href="#">Intézményeink</a>
+                    <a href="#">Tevékenységeink</a>
                     <a href="#">Hírek</a>
                     <a href="#">Dokumentumtár</a>
                     <a href="#">Adatkezelés</a>
